--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    
+    <button title = "Print page" onclick="window.print()" class = "btn btn-light btn-sm noprint"><img id = "printer" src="static\index.png" alt="Print" width="20px"/></button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -57,7 +58,7 @@
     </ul>
     
     </div>
-    <a title="version en español" class="nav-link" href="indice.html" role="button">
+    <a title="version en español" class="nav-link noprint" href="indice.html" role="button">
         <img id = "home"
             src="static/oz.png"
             alt="Flag"
