--- a/indice.html
+++ b/indice.html
@@ -28,41 +28,41 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">CV Richard Hart</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <!-- <li class="nav-item active">
-              <a class="nav-link" href="/">Synopsis <span class="sr-only">(current)</span></a>
-            </li> -->
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="empleo.html">Empleo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="experiencia.html">Experiencia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="academica.html">Academica</a>
-            </li>
-            <li class="nav-item">
-                <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">CV Richard Hart</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <button title = "Print page" onclick="window.print()" class = "btn btn-light btn-sm noprint"><img id = "printer" src="static\index.png" alt="Print" width="20px"/></button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <!-- <li class="nav-item active">
+          <a class="nav-link" href="/">Synopsis <span class="sr-only">(current)</span></a>
+        </li> -->
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="empleo.html">Empleo</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="experiencia.html">Experiencia</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="academica.html">Academica</a>
+        </li>
+        <li class="nav-item">
+            <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
+        </li>
+        <li class="nav-item dl">
+            <a id="pdf" title="Baja pdf file" href="downloads/CV Richard Hart_español.pdf"><img src="static/PDF_icon.png" width="30px"></a>
             </li>
             <li class="nav-item dl">
-                <a id="pdf" title="Baja pdf file" href="downloads/CV Richard Hart_español.pdf"><img src="static/PDF_icon.png" width="30px"></a>
-                </li>
-                <li class="nav-item dl">
-                <a id="doc" title="Baja docx"href="downloads/CV Richard Hart_español.docx"><img src="static/doc.png" width="30px"></a>
-                </li>
-          </ul>
-        </div>
-        <a class="nav-link" href="index.html" role="button">
+            <a id="doc" title="Baja docx"href="downloads/CV Richard Hart_español.docx"><img src="static/doc.png" width="30px"></a>
+            </li>
+      </ul>
+    </div>
+        <a class="nav-link noprint" href="index.html" role="button">
           <img id = "home" src="static/bandera.png" alt="Bandera" width="25px"/>
         </a>
-    </nav>
+</nav>
 <main style="padding-top:1vh; background-color:#f6f6f6;">
 <div class="container">
     <div class="row">
@@ -70,10 +70,10 @@
         <p style="margin-bottom: 1rem;">
             Ingeniero civil/estructural australiano. Autónomo residente en España con disponibilidad de 
             incorporarse en proyectos u obras de corta o larga duración. Particularmente interesado en:<br>
-            > Gestión del proyecto para el desarrollo de los documentos de diseño ; planos, especificaciones, manuales etc. 
-            para las ofertas y diseño final;<br>
+            > Gestión de la preparación de los documentos de construcción (planos, especificaciones, manuales de mantenimiento etc.) desde la fase de desarrollo de diseño 
+            hasta el diseño final y los planos <i>as-built</i>;<br>
             > Representante de consultante en reuniones de diseño, obra o de la Junta Directiva;<br>
-            > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, 
+            > Evaluación técnica, contractual y financiera  de reclamaciones para establecer responsabilidad, causa, 
             efecto y daños y mediación de conflictos.
             </p>
         </div>
@@ -109,7 +109,7 @@
                 > Diseño estructural en edificación utilizando hormigón armado, acero, madera y estructuras de fábrica.<br>
                 > Diseño de pavimiento y drenaje en urbanizaciones.<br>
                 > Estimación de cuantías, inspecciones y evaluación de edificios, informes, declaración de método y especificaciones etc.<br>
-                > Evaluación técnica de reclamaciones para establecer responsabilidad, causa, efecto y daños y mediación de conflictos.
+                > Evaluación de reclamaciones para establecer responsabilidad, causa, efecto y daños y mediación de conflictos.
             </p>   
       </div>
       <div class="col-sm">
@@ -135,7 +135,8 @@
         <span class="cvheading">Experiencia 2006-actual</span>
         <span class="link"><b>Evaluación de reclamaciones de contratistas</b></span>
             <p>Responsable de evaluar y defender varias reclamaciones de los contratistas 
-            contra Eptisa.
+            contra Eptisa. Revisar y comentar sobre los informes de los expertos y la empresa aseguradora. 
+            Atender y asistir en la mediación.
             </p>
     </div>
     <div class="row">
