align docs with web page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">CV Richard Hart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
     <button title = "Print page" onclick="window.print()" class = "btn btn-light btn-sm noprint"><img id = "printer" src="static\index.png" alt="Print" width="20px"/></button>
 
@@ -58,13 +58,8 @@
     </ul>
     
     </div>
-    <a title="version en español" class="nav-link noprint" href="indice.html" role="button">
-        <img id = "home"
-            src="static/oz.png"
-            alt="Flag"
-            width="35px"
-            title="English"
-            />
+    <a class="nav-link noprint" href="indice.html" role="button">
+        <img id = "home" src="static/oz.png" alt="Flag" width="25px" title="English"/>
         </a>
 </nav>
 <main style="padding-top:1vh; background-color:#f6f6f6;">
@@ -139,7 +134,7 @@
         <span class="cvheading">Experience 2006 to present</span>
                 <span><b>Evaluation of contractor claims:</b></span>
                 <p> Assessment of the contractual, technical and financial position of construction claims
-                    brought against Eptisa including evaluation of experts' reports and insurance.
+                    brought against Eptisa including evaluation of experts' reports and insurance coverage.
                     Attendance at mediation to assist in the negotiated resolution of disputes.
                 </p>
     </div>
