--- a/indice.html
+++ b/indice.html
@@ -31,14 +31,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">CV Richard Hart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <span class="navbar-toggler-icon"></span>
     </button>
     <button title = "Print page" onclick="window.print()" class = "btn btn-light btn-sm noprint"><img id = "printer" src="static\index.png" alt="Print" width="20px"/></button>
+    
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item active">
-          <a class="nav-link" href="/">Synopsis <span class="sr-only">(current)</span></a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="empleo.html">Empleo</a>
         </li>
@@ -60,7 +58,7 @@
       </ul>
     </div>
         <a class="nav-link noprint" href="index.html" role="button">
-          <img id = "home" src="static/bandera.png" alt="Bandera" width="25px"/>
+          <img id = "home" src="static/bandera.png" alt="Bandera" width="25px" title="Español"/>
         </a>
 </nav>
 <main style="padding-top:1vh; background-color:#f6f6f6;">
