near final commit

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     margin= "5px"
                     />
             </div>
-            <p style="margin-left: 5px;">Nearly 40 years of construction industry experience in 
+            <p style="margin-left: 5px;">Extensive construction industry experience in 
                 the fields of civil and structural engineering, covering both building structures 
                 and, more recently, bridge projects. Work experience in Australia, England and Spain.
             </p>
