--- a/indice.html
+++ b/indice.html
@@ -89,7 +89,7 @@
                     margin= "5px"
                     />
             </div>
-            <p style="margin-left: 5px;">Casi 40 años de experiencia como ingeniero civil y estructural. 
+            <p style="margin-left: 5px;">Amplia experiencia como ingeniero civil y estructural. 
                 El experiencia cubre tanto edificación como puentes en los últimos años. Experiencia en Australia, 
                 Inglaterra y España.
             </p>
