Project manager, remove 10 years experience

--- a/empleo.html
+++ b/empleo.html
@@ -43,9 +43,9 @@
           <li class="nav-item">
             <a class="nav-link" href="experiencia.html">Experiencia</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="academica.html">Academica</a>
-          </li>
+          </li> -->
           <li class="nav-item">
               <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
           </li>
@@ -116,7 +116,7 @@
       <td><b>John E. Foster & Partners, Londres.</b> Proyectista/Ingeniero de obra.
       </td>
     </tr>
-    <tr>
+    <!-- <tr>
       <td>ago 90- feb 91</td>
       <td><b>Ross & Partners, Londres.</b> Proyectista.
       </td>
@@ -165,7 +165,7 @@
       <td>ene 83-ago 83</td>
       <td><b>Tech Builders, Melbourne.</b> Encargado de obra.
       </td>
-    </tr>
+    </tr> -->
     
   </tbody>
 </table>
