--- a/indice.html
+++ b/indice.html
@@ -43,9 +43,9 @@
         <li class="nav-item">
           <a class="nav-link" href="experiencia.html">Experiencia</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="academica.html">Academica</a>
-        </li>
+        </li> -->
         <li class="nav-item">
             <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
         </li>
@@ -67,12 +67,12 @@
         <span class="cvheading" style="margin-top:0%">Introducción</span><br>
         <p style="margin-bottom: 1rem;">
             Ingeniero civil/estructural australiano. Autónomo residente en España con disponibilidad de 
-            incorporarse en proyectos u obras de corta o larga duración. Particularmente interesado en:<br>
-            > Gestión de la preparación de los documentos de construcción (planos, especificaciones, manuales de mantenimiento etc.) desde la fase de desarrollo de diseño 
+            incorporarse en proyectos u obras de corta o larga duración. Particularmente interesado en el papel de <b>Jefe de Proyecto</b>:<br>
+            > Controlar la preparación de los documentos de construcción (planos, especificaciones, manuales de mantenimiento etc.) desde la fase de desarrollo de diseño 
             hasta el diseño final y los planos <i>as-built</i>;<br>
-            > Representante de consultante en reuniones de diseño, obra o de la Junta Directiva;<br>
-            > Evaluación técnica, contractual y financiera  de reclamaciones para establecer responsabilidad, causa, 
-            efecto y daños y mediación de conflictos.
+            > Representar la consultaría en reuniones de diseño, obra o de la Junta Directiva;<br>
+            > Evaluar los aspectos técnicos, contractuales y financieros de cualquier reclamación para establecer responsabilidad, causa, 
+            efecto y daños y participar in cualquier mediación de conflictos.
             </p>
         </div>
         <hr>
@@ -97,7 +97,7 @@
                 <span class="cvheading">Profesión </span> 
                 <p>Ingeniero civil/estructural.</p>
                 <span class="cvheading">Formación académica</span>
-                <p>BE (Civil) University of Melbourne, 1982.</p>
+                <p>BE (Civil) University of Melbourne.</p>
             </div>
       </div>
       <div class="col-sm">
