--- a/email.html
+++ b/email.html
@@ -40,9 +40,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="experience.html">Experience</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="academic.html">Academic</a>
-            </li>
+            </li> -->
             </ul>
         </div>
         <a class="nav-link" href="email_esp.html" role="button">
