--- a/email_esp.html
+++ b/email_esp.html
@@ -40,9 +40,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="experiencia.html">Experiencia</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="academica.html">Academica</a>
-            </li>
+            </li> -->
             </ul>
         </div>
         <a class="nav-link" href="email.html" role="button">
