--- a/employment.html
+++ b/employment.html
@@ -43,9 +43,9 @@
           <li class="nav-item">
             <a class="nav-link" href="experience.html">Experience</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="academic.html">Academic</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a style="color:tomato" class="nav-link" aria-current="page" href="email.html">Contact</a>
           </li>
@@ -107,7 +107,7 @@
       <td><b>John E. Foster & Partners, London</b> Design Engineer/Resident Engineer.
       </td>
     </tr>
-    <tr>
+    <!-- <tr>
       <td>Aug 90- Feb 91</td>
       <td><b>Ross & Partners, London</b> Design engineer.
       </td>
@@ -156,7 +156,7 @@
       <td>Jan 83-Aug 83</td>
       <td><b>Tech Builders, Melbourne</b> Site leading hand.
       </td>
-    </tr>
+    </tr> -->
     
   </tbody>
 </table>
