--- a/experience.html
+++ b/experience.html
@@ -43,9 +43,9 @@
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="employment.html">Employment Record</a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="academic.html">Academic</a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a style="color:tomato" class="nav-link active" aria-current="page" href="email.html">Contact</a>
               </li>
