--- a/experiencia.html
+++ b/experiencia.html
@@ -43,9 +43,9 @@
             <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="empleo.html">Empleo</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="academica.html">Academica</a>
-            </li>
+            </li> -->
             <li class="nav-item">
                 <a style="color:tomato" class="nav-link active" aria-current="page" href="email_esp.html">Contacto</a>
             </li>
