--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <li class="nav-item">
             <a class="nav-link" href="experience.html">Experience</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
             <a class="nav-link" href="academic.html">Academic</a>
-        </li>
+        </li> -->
         <li class="nav-item">
             <a style="color:tomato" class="nav-link" aria-current="page" href="email.html">Contact</a>
         </li>
@@ -68,12 +68,11 @@
         <span class="cvheading" style="margin-top:0%">Introduction</span><br>
         <p style="margin-bottom: 1rem;">Australian freelance civil/structural engineer 
             with extensive experience. Based in Spain with availability for either short or long-term assignments. 
-            With particular interest in:<br>
-            > Management of construction document preparation from design development, through detailed design to as-built phases
-            ; drawings, specifications, maintenance manuals etc.;<br>
-            > Representation of consultant at design/site/project management meetings;<br>
-            > Assessment and evaluation of claims to establish responsibility, 
-            cause, effect and damage, to assist in mediation.
+            With particular interest in the role of <b>Project Manager</b>:<br>
+            > Manage the preparation of construction documents from design development, through detailed design 
+            to as-built phases; drawings, specifications, maintenance manuals etc.;<br>
+            > Represent the consultant at design/site/project management meetings;<br>
+            > Assess and evaluate any claims to establish responsibility, cause, effect and damage, and assist in any mediation.
             </p>
     </div>
     <hr>
@@ -98,7 +97,7 @@
                 <span class="cvheading">Profession</span> 
                 <p>Structural/Civil Engineer.</p>
                 <span class="cvheading">Qualifications</span>
-                <p>BE (Civil) University of Melbourne, 1982.</p>
+                <p>BE (Civil) University of Melbourne.</p>
             </div>
       </div>
       <div class="col-sm">
