--- a/experiencia.html
+++ b/experiencia.html
@@ -68,7 +68,10 @@
         <hr>
         <span class="cvheading">EPTISA</span><br>
         <p><a class="link" href="https://merseygateway.co.uk/">Mersey Gateway Project:</a> Vice Jefe de Proyecto <i>Landside Structures.</i><br>
-            <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a> Jefe de Proyecto chequeo CAT III.</p>
+            <span>Diseño del viaducto de hormigón armado Astmoor & Bridgewater, los muros de contención de varias tipologías, geotecnia y drenaje para 
+            todo el proyecto, incluyendo el puente principal. Además, se ha encargado del apoyo técnico a la construcción.</span><br>
+            <a class="link" href="https://www.n25newross.ie/">N25 New Ross Bypass:</a> Jefe de Proyecto chequeo CAT III.<br>
+            <span>Chequeo de Categoría III para el puente de Barrow y chequeo del diseño geotécnico del proyecto.</span></p>
         <figure>
             <img src="photos/Mersey.jpg" alt="Mersey Gateway" style="width:90%">
             <figcaption>Mersey Gateway Project: Puente principal</figcaption>
