--- a/indice.html
+++ b/indice.html
@@ -90,7 +90,7 @@
                     />
             </div>
             <p style="margin-left: 5px;">Amplia experiencia como ingeniero civil y estructural. 
-                El experiencia cubre tanto edificación como puentes en los últimos años. Experiencia en Australia, 
+                El experiencia en edificación y puentes en los últimos años. Experiencia en Australia, 
                 Inglaterra y España.
             </p>
             <div class="container-fluid p-0" style="float:left">
@@ -103,7 +103,7 @@
       <div class="col-sm">
         <span class="cvheading">Experiencia</span>
             <p>
-                > Experiencia amplia en diseño, supervisión de obra, chequeos independientes y gestión de proyectos.<br>
+                > Amplia experiencia  en diseño, supervisión de obra, chequeos independientes y gestión de proyectos.<br>
                 > Diseño estructural en edificación utilizando hormigón armado, acero, madera y estructuras de fábrica.<br>
                 > Diseño de pavimiento y drenaje en urbanizaciones.<br>
                 > Estimación de cuantías, inspecciones y evaluación de edificios, informes, declaración de método y especificaciones etc.<br>
@@ -132,9 +132,8 @@
     <div class="row">
         <span class="cvheading">Experiencia 2006-actual</span>
         <span class="link"><b>Evaluación de reclamaciones de contratistas</b></span>
-            <p>Responsable de evaluar y defender varias reclamaciones de los contratistas 
-            contra Eptisa. Revisar y comentar sobre los informes de los expertos y la empresa aseguradora. 
-            Atender y asistir en la mediación.
+            <p>Responsable de evaluar y defender varias reclamaciones de los contratistas contra Eptisa. 
+            Revisión y comentarios sobre los informes de los expertos y la empresa aseguradora. Asistencia en la mediación.
             </p>
     </div>
     <div class="row">
@@ -158,8 +157,7 @@
         <p><b>Gestión de la producción de los planos constructivos y representante del diseño 
         en obra</b> para el New Europe Bridge (Vidin-Calafat, Bulgaria). Responsable para el desarrollo de 
         los planos de diseño a los planos de construcción. Incluido el Puente Principal 
-        y sus viaductos, el viaducto del ferrocarril y el drenaje. También el 
-        representante en obra del diseño.</p>
+        y sus viaductos, el viaducto del ferrocarril y el drenaje. Representante en obra del diseño.</p>
     </div>
   </div>
 </main>
