bring in line English version with version sent to JR

--- a/employment.html
+++ b/employment.html
@@ -88,75 +88,75 @@
     </tr>
     <tr>
       <td>Sep 02- Feb 04</td>
-      <td><b>Ross & Partners, London /Fitzpatrick Contractors, London</b>
+      <td><b>Ross & Partners, London /Fitzpatrick Contractors, London.</b>
           Resident Engineer Gibraltar General Hospital. Contract value £30m.
       </td>
     </tr>
     <tr>
       <td>Feb 00- Jul 02</td>
-      <td><b>Pondio Ingenieros, Madrid</b> Design engineer.
+      <td><b>Pondio Ingenieros, Madrid.</b> Design engineer.
       </td>
     </tr>
     <tr>
       <td>Sep 97- Aug 99</td>
-      <td><b>Ross & Partners, London</b> Design engineer.
+      <td><b>Ross & Partners, London.</b> Design engineer.
       </td>
     </tr>
     <tr>
       <td>May 91- Sep 97</td>
-      <td><b>John E. Foster & Partners, London</b> Design Engineer/Resident Engineer.
+      <td><b>John E. Foster & Partners, London.</b> Design Engineer/Resident Engineer.
       </td>
     </tr>
-    <!-- <tr>
+    <tr>
       <td>Aug 90- Feb 91</td>
-      <td><b>Ross & Partners, London</b> Design engineer.
+      <td><b>Ross & Partners, London.</b> Design engineer.
       </td>
     </tr>
     <tr>
       <td>Mar 90- Aug 90</td>
-      <td><b>Delta Demolitions, Melbourne</b> Site foreman.
+      <td><b>Delta Demolitions, Melbourne.</b> Site foreman.
       </td>
     </tr>
     <tr>
       <td>Dec 88- Mar 90</td>
-      <td><b>P & S Kubale Ltd, Melbourne</b> Site leading hand.
+      <td><b>P & S Kubale Ltd, Melbourne.</b> Site foreman.
       </td>
     </tr>
     <tr>
       <td>Jan 88- Dec 88</td>
-      <td><b>Zafiris Constructions, Melbourne</b> Cost estimator.
+      <td><b>Zafiris Constructions, Melbourne.</b> Cost estimator.
       </td>
     </tr>
     <tr>
       <td>May 87- Dec 87</td>
-      <td><b>Ross & Partners, London</b> Design engineer.
+      <td><b>Ross & Partners, London.</b> Design engineer.
       </td>
     </tr>
     <tr>
       <td>Jun 86- Mar 87</td>
-      <td><b>Reviresco Contracting, London</b> Site leading hand.
+      <td><b>Reviresco Contracting, London.</b> Site leading hand.
       </td>
     </tr>
     <tr>
       <td>Dec 85- May 86</td>
-      <td><b>P & S Kubale Ltd, Melbourne</b> Site leading hand.
+      <td><b>P & S Kubale Ltd, Melbourne.</b> Site leading hand.
       </td>
     </tr>
     <tr>
       <td>May 85- Nov 85</td>
-      <td><b>Ross & Partners, London</b> Design engineer.
+      <td><b>Ross & Partners, London.</b> Design engineer.
       </td>
     </tr>
     <tr>
       <td>Sep 83- Nov 84</td>
-      <td><b>P. Berger & Associates, Melbourne</b> Design Engineer.
+      <td><b>P. Berger & Associates, Melbourne.</b> Design Engineer.
       </td>
     </tr>
     <tr>
       <td>Jan 83-Aug 83</td>
-      <td><b>Tech Builders, Melbourne</b> Site leading hand.
+      <td><b>Tech Builders, Melbourne.</b> Site leading hand.
       </td>
-    </tr> -->
+    </tr>
     
   </tbody>
 </table>
