--- a/index.html
+++ b/index.html
@@ -66,14 +66,26 @@
 <div class="container">
     <div class="row">
         <span class="cvheading" style="margin-top:0%">Introduction</span><br>
-        <p style="margin-bottom: 1rem;">Australian freelance civil/structural engineer 
-            with extensive experience. Based in Spain with availability for either short or long-term assignments. 
-            With particular interest in the role of <b>Project Manager</b>:<br>
-            > Manage the preparation of construction documents from design development, through detailed design 
-            to as-built phases; drawings, specifications, maintenance manuals etc.;<br>
-            > Represent the consultant at design/site/project management meetings;<br>
-            > Assess and evaluate any claims to establish responsibility, cause, effect and damage, and assist in any mediation.
+        <p style="margin-bottom: 1rem;">
+            I am an Australian freelance civil and structural engineer with extensive experience 
+            with both Consultants and Contractors. Rather than specialising in any one particular 
+            aspect of design or construction, I have a broad experience including Project Management, 
+            Building Design and Technical Support during construction (both new-build and 
+            renovation/repair projects). As I am self-employed, I am available for either short or 
+            long-term assignments and have the flexibility to work from home, office or site.
             </p>
+        <p>
+            I believe my particular strengths lie in <b>Project Management</b>; coordinating multidiscipline 
+            designers to take a project from tender through detailed design to as-built, 
+            <b>Communication</b>; able to communicate well with other construction professionals and 
+            clients both in writing and particularly in meetings, <b>Problem Solving</b>; able to quicky 
+            narrow down the optimum solution when confronted with either design or construction issues, 
+            and <b>Conflict Resolution</b>; able to analyse documentation and extract relevant information 
+            to establish responsibility, cause, effect and damage to assist in the defence of claims 
+            and in mediation. From dealing with claims involving <b>Tenders</b>, I have an understanding 
+            of how they can be developed in order to provide an optimal solution and minimise the 
+            possibility of future costly litigation.
+        </p>
     </div>
     <hr>
     <div class="row">
@@ -89,9 +101,10 @@
                     margin= "5px"
                     />
             </div>
-            <p style="margin-left: 5px;">Extensive construction industry experience in 
-                the fields of civil and structural engineering, covering both building structures 
-                and, more recently, bridge projects. Work experience in Australia, England and Spain.
+            <p style="margin-left: 5px;">
+                Extensive construction industry experience in the fields of civil and structural 
+                engineering, covering both building structures and, more recently, bridge projects.
+                Work experience in Australia, England and Spain.
             </p>
             <div class="container-fluid p-0" style="float:left">
                 <span class="cvheading">Profession</span> 
@@ -103,11 +116,11 @@
       <div class="col-sm">
         <span class="cvheading">Experience</span>
             <p>
-                > Broad range of experience in design, site supervision, independent checking and project management.<br>
-                > Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.<br>
-                > Civil Engineering design of paved areas  and drainage in housing developments.<br>
-                > Quantities estimating, structural surveys and appraisals of existing buildings, reports,  method statements, specifications etc.<br>
-                > Contractual, technical and financial evaluation of construction claims.
+                > Broad range of experience in design, site supervision, independent checking and project management.
+                <br>> Structural design of building projects in reinforced concrete, structural steelwork, timber, and masonry.
+                <br>> Civil Engineering design of paved areas and drainage in housing developments.
+                <br>> Quantities estimating, structural surveys and appraisals of existing buildings, reports, method statements, specifications, operation and maintenance manuals, cost estimation, feasibility study.
+                <br>> Contractual, technical and financial evaluation of construction claims.
             </p>   
       </div>
       <div class="col-sm">
